--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-/*=============== GOOGLE FONTS ===============*/
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-/*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem; /*56px*/
 
@@ -32,8 +31,7 @@
 
 
 
-  /*========== Font and typography ==========*  rgb(24, 24, 24)/
-  /*.5rem = 8px | 1rem = 16px ...*/
+  /*========== Font and typography ==========*/
   --body-font: 'Poppins', sans-serif;
   --big-font-size: 2rem;
   --h1-font-size: 1.5rem;
